--- a/original/components/sass/_base.scss
+++ b/original/components/sass/_base.scss
@@ -1,5 +1,12 @@
 // _base.scss
 // ==============
+
+* {
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 html{
   height: 100%;
 }
@@ -17,7 +24,8 @@ body  {
 }
 
 p{
-  font-family: $openSans;
+  font-family: $insideparagraph;
+  font-size: 30px;
 }
 
 .subtitle{
