--- a/original/components/sass/_variables.scss
+++ b/original/components/sass/_variables.scss
@@ -1,22 +1,10 @@
 // _variables.scss
 // =================
-@import "http://fonts.googleapis.com/css?family=Patua+One|Inika";
-
 @include font-face(Sectra, "../fonts/GT-Sectra-Fine-Book",  null, null, woff);
 @include font-face(SectraItalic, "../fonts/GT-Sectra-Fine-Book-Italic",  null, null, woff);
 @include font-face(Orator, "../fonts/oratorstd-webfont", null, null, woff);
+@include font-face(Benton, "../fonts/bentonsans-light-webfont", null, null, woff);
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300');
-
-
-$beige         : #E3C691;
-$darkGreenGold : #8D8862;
-$lightGreen    : #C0DC99;
-$lightBlue     : #97D5D9;
-$desatBlue     : #464B65;
-$purple        : #3E2B3D;
-$darkPurple    : #3A3248;
-$pink          : #CC8E94;
-$skin          : #B08B7B;
 
 $white         : #FFFFFF;
 $black         : #000000;
@@ -26,5 +14,5 @@ $ligthBlue     : #33fffd;
 
 $titleFont  : 'Orator', sans-serif;
 $subtitleFont : 'SectraItalic', sans-serif;
-$openSans : 'Open Sans', sans-serif;
+$insideparagraph : 'Benton', Helvetica, sans-serif;
 $bodyFont : 'Orator', serif;
