--- a/jekyll/_layouts/home.html
+++ b/jekyll/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
   <div class="row" id="works">
     {% for post in site.posts %}
       <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3 work">
-        <a href="{% if post.external_link %}{{post.link}}{% else %}{{site.baseurl}}{{post.url}}{% endif %}" title="Link to {{site.baseurl}}{{post.url}}"><img class="img-responsive" src="{{site.baseurl}}{{ post.thumbnail }}" alt="{{post.title}}" /></a>
+        <a href="{% if post.external_link %}{{post.link}}{% else %}{{site.baseurl}}{{post.url}}{% endif %}" title="Link to {{site.baseurl}}{{post.url}}" target="{% if post.external_link %}_blank{% else %}{{site.baseurl}}_self{% endif %}"><img class="img-responsive" src="{{site.baseurl}}{{ post.thumbnail }}" alt="{{post.title}}" /></a>
         <h3><a href="{% if post.external_link %}{{post.link}}{% else %}{{site.baseurl}}{{post.url}}{% endif %}" title="Link to {{site.baseurl}}{{post.url}}">{{post.title}}</a></h3>
         <p class="subtitle">{{ post.description | strip_html | truncatewords:16 }}</p>
       </div>
