--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -57,7 +57,8 @@ page-type: post
       {% endif %}
 
       {% if page.links %}
-      <h6>Resources:</h6>
+      <br>
+      <h6>Additional Resources:</h6>
         <ul>    
           {% for resource in page.links %}
             {% for link in resource %}
