--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-8 col-sm-6 col-md-4 col-md-offset-1">
-        <h2>Creative Technology, Data Visualization, Interactivity. M.P.S Candidate at the Interactive Telecommunications Program
+        <h2>M.P.S Candidate at the Interactive Telecommunications Program
           (ITP), Tisch School of the Arts, NYU.</h2>
       </div>
     </div>
