--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-8 col-sm-6 col-md-4 col-md-offset-1">
-        <h2>Researcher @ <a href="https://tisch.nyu.edu/itp">ITP NYU</a> | Author or  <a href="https://runwayml.com">RunwayML.</a><br>  Building machine learning tools for artists and designers.</h2>
+        <h2>Building ML/AI tools for artists and designers. <br>Researcher @ <a href="https://tisch.nyu.edu/itp">ITP NYU</a> </h2>
       </div>
     </div>
   </div>
